@@ -25,3 +25,4 @@ EndOfYear.sql
 Util.sql
 Assets.sql
 Files.sql
+Fixes.sql
